maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:25: error: Int.type does not take parameters
  def keepHandOnSideWall(etat : Int) = Int {
                                           ^